--- a/index.html
+++ b/index.html
@@ -1,2 +1,9 @@
-Hi
- again
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Remy Bordignon</title>
+</head>
+<body>
+<embed src="remy_bordignon.pdf" type="application/pdf" width="100%" height="600px" />
+</body>
+</html>
