--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 	<title>Remy Bordignon</title>
 </head>
 <body>
-<embed src="remy_bordignon.pdf" type="application/pdf" width="100%" height="600px" />
+<embed src="remy_bordignon.pdf" type="application/pdf" width="100%" height="100%" />
 </body>
 </html>
