--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<title>Remy Bordignon</title>
 </head>
 <body>
-<embed src="remy_bordignon.pdf" type="application/pdf" width="100%" height="100%" />
+	<div style="width: 100%; height: 100%">
+		<embed src="remy_bordignon.pdf" type="application/pdf" width="100%" height="100%" />
+	</div>
 </body>
 </html>
