--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
 	<title>Remy Bordignon</title>
 </head>
-<body>
-	<div style="width: 100%; height: 100%">
-		<embed src="remy_bordignon.pdf" type="application/pdf" width="100%" height="100%" />
-	</div>
-</body>
+  <body>
+
+    <iframe src="remy_bordignon.pdf" width="100%", height="100%" >
+    </iframe>
+
+  </body>
 </html>
